BPER/DEVF/force-app/main/default/objects/Event_Call_Me_Back_Contact_Center__c/Event_Call_Me_Back_Contact_Center__c.object-meta.xml
<CustomObject>
    <description>Oggetto utilizzato per la gestione degli Eventi Call Me Back</description>
    <label>Event - Call Me Back Contact Center</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Event - Call Me Back Contact Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events - Call Me Back Contact Center</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>