BPER/DEVF/force-app/main/default/objects/Event_Call_Me_Back_Contact_Center__c/fields/CC_Script_Attivo__c.field-meta.xml
<CustomField>
    <fullName>CC_Script_Attivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Script Attivo</label>
    <type>Checkbox</type>
</CustomField>