BPER/DEVF/force-app/main/default/objects/Event_Call_Me_Back_Contact_Center__c/fields/CC_Storico_Esitazioni__c.field-meta.xml
<CustomField>
    <fullName>CC_Storico_Esitazioni__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Storico Esitazioni</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>