BPER/DEVF/force-app/main/default/objects/Event_Call_Me_Back_Contact_Center__c/fields/Id_Event__c.field-meta.xml
<CustomField>
    <fullName>Id_Event__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>