BPER/DEVF/force-app/main/default/objects/Event_Call_Me_Back_Contact_Center__c/fields/Nome_Prodotto__c.field-meta.xml
<CustomField>
    <fullName>Nome_Prodotto__c</fullName>
    <label>Nome Prodotto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Carte</fullName>
            </value>
            <value>
                <fullName>PagaPoi</fullName>
            </value>
            <value>
                <fullName>Prestito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>