BPER/DEVF/force-app/main/default/objects/Event_Call_Me_Back_Contact_Center__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Script</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>