BPER/DEVF/force-app/main/default/objects/Event_Call_Me_Back_Contact_Center__c/recordTypes/Event_Call_Me_Back_Script.recordType-meta.xml
<RecordType>
    <fullName>Event_Call_Me_Back_Script</fullName>
    <active>true</active>
    <label>Event - Call Me Back Script</label>
</RecordType>