BPER/DEVF/force-app/main/default/objects/Event_Call_Me_Back_Contact_Center__c/recordTypes/Event_Call_Me_Back_Storico_Esitazioni.recordType-meta.xml
<RecordType>
    <fullName>Event_Call_Me_Back_Storico_Esitazioni</fullName>
    <active>true</active>
    <label>Event - Call Me Back Storico Esitazioni</label>
</RecordType>